# Wealthsimpleton

./: .gitignore  README.md  pyproject.toml
wealthsimpleton/: __init__.py  wealthsimpleton.py
