[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wealthsimpleton"
version = "0.1.0"
description = "Wealthsimpleton package"
authors = [{ name = "Imran Remtulla", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "selenium",
    "selenium-stealth",
    "python-dotenv",
    "fuzzywuzzy",
    "python-Levenshtein",
]

[tool.setuptools.packages.find]
where = ["."]
